# aoc2021

./: Cargo.toml  flake.nix
src/: lib.rs
src/aoc2021/: day1.rs  day2.rs  day3.rs  dayX.rs  mod.rs
