[package]
name = "aoc2021"
version = "0.1.0"
authors = ["Gérald Lelong <gerald.lelong@easymov.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.10.1"
structopt = "0.3.21"
anyhow = "1.0.34"
parse-display = "0.5.3"
regex = "1.4.2"
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
easy-parallel = "3.1.0"
rayon = "1.5.0"
